fix: aggressively hide original gcm-right to prevent duplicate list on mobile due to cached javascript

--- a/src/css/Gifting.css
+++ b/src/css/Gifting.css
@@ -821,7 +821,8 @@
     gap: 6px;
   }
 
-  .desktop-only {
+  .desktop-only,
+  .gcm-right {
     display: none !important;
   }
 
@@ -946,10 +947,6 @@
 
   .gcm-left {
     padding: 12px 12px 24px 12px;
-  }
-
-  .gcm-right {
-    padding: 12px;
   }
 
   .gcm-products {
